# proc-rock

./: .gitignore  CMakeLists.txt  readme.md  setup.bat  setup.sh  vcpkg.patch
.github/workflows/: build.yml  style.yml
app/: CMakeLists.txt
app/res/shaders/: main.frag  main.vert
app/src/: app.cpp  app.h  main.cpp  math.h
app/src/abstracted_pipeline/: abstracted_pipeline.cpp  abstracted_pipeline.h  abstracted_pipeline_extender.h  abstracted_pipeline_factory.h  all.h  igneous_pipeline.cpp  igneous_pipeline.h  metamorphic_pipeline.cpp  metamorphic_pipeline.h  sedimentary_pipeline.cpp  sedimentary_pipeline.h
app/src/abstracted_pipeline/configurables/: form_generator.cpp  form_generator.h  texture_extras.cpp  texture_extras.h
app/src/gui/: gui.cpp  gui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  noise_node_editor.cpp  noise_node_editor.h
app/src/gui/node-editor/: imnodes.cpp  imnodes.h
app/src/io/: input_manager.cpp  input_manager.h  stb_image.h
app/src/render/: camera.cpp  camera.h  drawable.cpp  drawable.h  drawable_shape.cpp  drawable_shape.h  framebuffer.cpp  framebuffer.h  gl_includes.h  point_light.cpp  point_light.h  render_texture.cpp  render_texture.h  shader.cpp  shader.h  shape.cpp  shape.h
app/src/render/drawables/: cube.cpp  cube.h  ground.cpp  ground.h  mesh.cpp  mesh.h
cli/: CMakeLists.txt
cli/src/: main.cpp
example_files/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  granite_custom.json
lib/: CMakeLists.txt
lib/include/procrocklib/: configurable.h  export.h  generator.h  mesh.h  modifier.h  parameterizer.h  pipeline.h  pipeline_stage.h  pipeline_stage_factory.h  serialization.h  texture.h  texture_adder.h  texture_generator.h
lib/include/procrocklib/configurables/: coloring.h  configurable_extender.h  graph.h  noise.h  noise_graph.h  texturing.h
lib/include/procrocklib/mod/: all.h  cut_plane_modifier.h  decimate_modifier.h  displace_along_normals_modifier.h  subdivision_modifier.h  transformation_modifier.h
lib/include/procrocklib/par/: all.h  lscm_parameterizer.h  xatlas_parameterizer.h
lib/include/procrocklib/texadd/: all.h  cracks_texture_adder.h  noise_texture_adder.h
lib/include/procrocklib/texgen/: all.h  billow_noise_texture_generator.h  checkerboard_texture_generator.h  combined_noise_texture_generator.h  granite_texture_generator.h  igneous_texture_generator.h  noise_texture_generator.h  perlin_noise_texture_generator.h  ridged_multi_noise_texture_generator.h  selected_noise_texture_generator.h  single_noise_texture_generator.h
lib/src/: configurable.cpp  export.cpp  generator.cpp  internal_mesh.cpp  internal_mesh.h  mesh.cpp  modifier.cpp  parameterizer.cpp  pipeline.cpp  serialization.cpp  texture_adder.cpp  texture_generator.cpp
lib/src/configurables/: coloring.cpp  noise.cpp  noise_graph.cpp  texturing.cpp
lib/src/mod/: cut_plane_modifier.cpp  decimate_modifier.cpp  displace_along_normals_modifier.cpp  subdivision_modifier.cpp  transformation_modifier.cpp
lib/src/par/: lscm_parameterizer.cpp  xatlas_parameterizer.cpp
lib/src/texadd/: cracks_texture_adder.cpp  noise_texture_adder.cpp
lib/src/texgen/: billow_noise_texture_generator.cpp  checkerboard_texture_generator.cpp  combined_noise_texture_generator.cpp  granite_texture_generator.cpp  igneous_texture_generator.cpp  noise_texture_generator.cpp  perlin_noise_texture_generator.cpp  ridged_multi_noise_texture_generator.cpp  selected_noise_texture_generator.cpp  single_noise_texture_generator.cpp
lib/src/utils/: colors.h  mesh.h  texturing.h  vector.h
